--- a/nextjs.yml
+++ b/nextjs.yml
@@ -28,6 +28,10 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    # Add environment variables at the job level
+    env:
+      NEXT_PUBLIC_ADMIN_PASSWORD_HASH: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH }}
+      NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,36 +60,26 @@ jobs:
       - name: Debug Environment
         run: |
           echo "=== Environment Variables Check ==="
-          echo "YouTube API Key exists: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY != '' }}"
-          echo "Admin Hash exists: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH != '' }}"
-          echo "=== Current Environment Variables ==="
-          env | grep NEXT_PUBLIC || echo "No NEXT_PUBLIC variables found"
-          echo "=== End Environment Check ==="
+          echo "NEXT_PUBLIC_YOUTUBE_API_KEY length: ${#NEXT_PUBLIC_YOUTUBE_API_KEY}"
+          echo "NEXT_PUBLIC_ADMIN_PASSWORD_HASH length: ${#NEXT_PUBLIC_ADMIN_PASSWORD_HASH}"
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
-          # Automatically inject basePath in your Next.js configuration file and disable
-          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: |
             .next/cache
-          # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        env:
-          NEXT_PUBLIC_ADMIN_PASSWORD_HASH: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH }}
-          NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY }}
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        run: |
+          echo "Building with NEXT_PUBLIC_YOUTUBE_API_KEY available: ${{ env.NEXT_PUBLIC_YOUTUBE_API_KEY != '' }}"
+          ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
