--- a/nextjs.yml
+++ b/nextjs.yml
@@ -31,7 +31,7 @@ jobs:
     # Add environment variables at the job level
     env:
       NEXT_PUBLIC_ADMIN_PASSWORD_HASH: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH }}
-      NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY }}
+      NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YT_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -57,11 +57,6 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-      - name: Debug Environment
-        run: |
-          echo "=== Environment Variables Check ==="
-          echo "NEXT_PUBLIC_YOUTUBE_API_KEY length: ${#NEXT_PUBLIC_YOUTUBE_API_KEY}"
-          echo "NEXT_PUBLIC_ADMIN_PASSWORD_HASH length: ${#NEXT_PUBLIC_ADMIN_PASSWORD_HASH}"
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
@@ -76,10 +71,17 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Verify Environment Variables
+        run: |
+          echo "YouTube API Key exists: ${{ env.NEXT_PUBLIC_YOUTUBE_API_KEY != '' }}"
+          echo "Admin Hash exists: ${{ env.NEXT_PUBLIC_ADMIN_PASSWORD_HASH != '' }}"
+          # Print length of each (safely)
+          echo "YouTube API Key length: ${#NEXT_PUBLIC_YOUTUBE_API_KEY}"
+          echo "Admin Hash length: ${#NEXT_PUBLIC_ADMIN_PASSWORD_HASH}"
       - name: Build with Next.js
         env:
           NEXT_PUBLIC_ADMIN_PASSWORD_HASH: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH }}
-          NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY }}
+          NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YT_API_KEY }}
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} next build
           ${{ steps.detect-package-manager.outputs.runner }} next export
