--- a/nextjs.yml
+++ b/nextjs.yml
@@ -31,10 +31,19 @@ jobs:
     # Add environment variables at the job level
     env:
       NEXT_PUBLIC_ADMIN_PASSWORD_HASH: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH }}
-      NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YT_API_KEY }}
+      NEXT_PUBLIC_YOUTUBE_API_KEY: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Debug Build Environment
+        run: |
+          echo "BUILD ENVIRONMENT CHECK"
+          echo "YouTube API Key exists: ${{ secrets.NEXT_PUBLIC_YOUTUBE_API_KEY != '' }}"
+          echo "YouTube API Key from env: ${NEXT_PUBLIC_YOUTUBE_API_KEY:+is set}"
+          echo "Admin Hash exists: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH != '' }}"
+          echo "Admin Hash from env: ${NEXT_PUBLIC_ADMIN_PASSWORD_HASH:+is set}"
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -52,15 +61,18 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           static_site_generator: next
+
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -69,8 +81,10 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+
       - name: Debug Secrets
         run: |
           if [ -n "$NEXT_PUBLIC_YOUTUBE_API_KEY" ]; then
@@ -83,6 +97,7 @@ jobs:
           else
             echo "Admin hash is NOT set"
           fi
+
       - name: Build with Next.js
         env:
           NEXT_PUBLIC_ADMIN_PASSWORD_HASH: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD_HASH }}
@@ -90,6 +105,7 @@ jobs:
         run: |
           ${{ steps.detect-package-manager.outputs.runner }} next build
           ${{ steps.detect-package-manager.outputs.runner }} next export
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
